--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Cydia repository manager with cli, web, and desktop interfaces.",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint src tests bin",
+    "lint-fix": "eslint src tests bin --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -30,6 +32,14 @@
     "compressjs": "git+https://github.com/openpgpjs/compressjs.git",
     "fs-extra": "^6.0.1",
     "inquirer": "^6.0.0",
+    "openpgp": "^3.0.11",
     "unipkg": "0.0.3"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-jest": "^21.17.0",
+    "eslint-plugin-prettier": "^2.6.0",
+    "prettier": "^1.13.5"
   }
 }
